# theroyal-api

./: .env.example  .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 0727992eaaf4_add_ticket_system_models.py  13fb030656f9_add_clearance_submitted_to_subscriptions.py  3eb8003ca203_add_onboarding_fields_to_users.py  41e8304f1b05_make_user_email_nullable_for_phone_.py  6981e51edfd3_add_proof_of_address_url_to_kyc.py  93099bc0906c_auth_refactor_nullable_fields_.py  9e3cd4ecb5f8_add_plan_referral_clearance_fields.py  a206e54d49bc_initial_schema.py  caccc3f650ec_add_phone_verified_onboarding_step.py  cc86e50361d2_add_wallet_bypass_to_account.py  e850272951d5_initial_migration_all_9_models.py  e9f0a3bdd47d_add_ticket_models.py
app/: config.py  database.py  dependencies.py  main.py  redis.py  worker.py
app/models/: __init__.py  account.py  audit.py  base.py  kyc.py  notification.py  plan.py  subscription.py  ticket.py  user.py  wallet.py
app/routers/: auth.py  bank.py  kyc_user.py  notifications.py  onboarding.py  plans.py  subscriptions.py  tickets.py  users.py  wallet.py  webhooks.py
app/routers/admin/: __init__.py  clearance.py  kyc.py  payouts.py  plans.py  staff.py  stats.py  subscriptions.py  tickets.py  users.py
app/schemas/: auth.py  base.py  onboarding.py  plan.py  subscription.py  ticket.py  user.py  wallet.py
app/services/: audit.py  auth.py  clearance.py  notifications.py  onboarding.py  plans.py  queue.py  security.py  seed.py  subscriptions.py  ticket.py  wallet.py
app/utils/: codes.py  pagination.py  security.py
(+7 files in other folders)
